--- a/rach/index.html
+++ b/rach/index.html
@@ -6,7 +6,7 @@
 <meta name="author" content="John Doe">
 
 <!-- This start file was build by Paul Cheney  -->
-<title>Salt Side Crew: Home</title>
+<title>HTML5 Start Site by Camille Hall</title>
 
 <!-- TELLS PHONES NOT TO LIE ABOUT THEIR WIDTH & stops the font from enlarging when a phone is turned sideways-->
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -15,10 +15,11 @@
 
 
 <!-- STYLE SHEETS -->
-<link href="css/styles.css" rel="stylesheet">
-
-
-
+<link href="css/normalize.css" rel="stylesheet">
+<link href="css/small.css" rel="stylesheet">
+<link href="css/medium.css" rel="stylesheet">
+<link href="css/large.css" rel="stylesheet">
+	
      
 </head>
 <body>
@@ -33,7 +34,6 @@
     <nav class="clearfix">
         <ul >
             <li><a href="#">Home</a></li>
-            <img src="images/penguins.jpg" alt="Penguins">
             <li class="active"><a href="#">Products</a></li>
             <li><a href="#">Location</a></li>
             <li><a href="#">Contact</a></li>    
@@ -49,7 +49,7 @@
     
 <!-- FOOTER HERE -->   
     <footer>
-        &copy; 201x &bull; Paul Cheney &bull; 123-555-6789
+        &copy; 2019 &bull; Camille Hall &bull; 123-555-6780
     </footer>
 
 </body>
